--- a/en/glossaire.html
+++ b/en/glossaire.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glossaire</title>
+    <title>Glossary</title>
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps&display=swap">
@@ -21,26 +21,26 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__title">Glossaire</h1>
-        <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
+        <h1 class="header__title">Glossary</h1>
+        <div class="language-selector" role="navigation" aria-label="Language selector">
             <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Passer à la version anglaise">FR</a>
+                aria-label="Switch to English version">EN</a>
         </div>
     </header>
 
     <nav class="menu">
-        <button class="menu__toggle" aria-label="Ouvrir le menu">
+        <button class="menu__toggle" aria-label="Open menu">
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
             <span class="menu__bar"></span>
         </button>
 
-        <div class="menu__overlay" role="dialog" aria-label="Menu de navigation principal">
+        <div class="menu__overlay" role="dialog" aria-label="Main navigation menu">
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
                         style="background-image: url('../assets/img/hero_page_accueil2.avif')">
-                        <span>Page d'accueil</span>
+                        <span>Home</span>
                     </a>
                 </li>
                 <li>
@@ -52,13 +52,13 @@
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
                         style="background-image: url('../assets/img/card2.avif')">
-                        <span>L'effet Matilda</span>
+                        <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
                         style="background-image: url('../assets/img/card3.avif')">
-                        <span>La science d'Ada</span>
+                        <span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
@@ -70,19 +70,17 @@
                 <li>
                     <a href="litterature.html" class="menu__button"
                         style="background-image: url('../assets/img/card5.avif')">
-                        <span>Ada dans la littérature</span>
+                        <span>Ada in Literature</span>
                     </a>
                 </li>
             </ul>
 
-            <div class="menu__footer" role="navigation" aria-label="Liens secondaires">
-                <a href="glossaire.html" class="menu__footer-link" aria-label="Consulter le glossaire">Glossaire</a>
-                <a href="contact.html" class="menu__footer-link"
-                    aria-label="Accéder au formulaire de contact">Contactez-nous</a>
-                <a href="a-propos.html" class="menu__footer-link" aria-label="En savoir plus à propos du projet">À
-                    propos</a>
-                <a href="autres-projets.html" class="menu__footer-link" aria-label="Découvrir d'autres projets">Autres
-                    projets</a>
+            <div class="menu__footer" role="navigation" aria-label="Secondary links">
+                <a href="glossaire.html" class="menu__footer-link" aria-label="Consult the glossary">Glossary</a>
+                <a href="contact.html" class="menu__footer-link" aria-label="Access the contact form">Contact us</a>
+                <a href="a-propos.html" class="menu__footer-link" aria-label="Learn more about the project">About</a>
+                <a href="autres-projets.html" class="menu__footer-link" aria-label="Discover other projects">Other
+                    projects</a>
             </div>
         </div>
     </nav>
@@ -92,40 +90,39 @@
         </section>
         <section class="Texte__principal-glossaire">
             <div class="navyblue__block">
-                <div class="textmono-title--glossaire">Algorithme :</div>
-                <p>Suite d’instructions ou de règles précises permettant d’effectuer une tâche ou de résoudre un
-                    problème.</p>
+                <div class="textmono-title--glossaire">Algorithm :</div>
+                <p>A sequence of precise instructions or rules for performing a task or solving a problem.</p>
                 <div class="textmono-title--glossaire">Charles Babbage :</div>
-                <p>Mathématicien et inventeur britannique du XIXe siècle, considéré comme le père des ordinateurs. Il a
-                    imaginé et conçu la machine analytique, ancêtre des ordinateurs modernes, avec l’aide intellectuelle
-                    d’Ada Lovelace.</p>
-                <div class="textmono-title--glossaire">Machine Analytique :</div>
-                <p>Projet de machine à calculer programmable inventé par Charles Babbage. Cette machine aurait pu
-                    exécuter des algorithmes grâce à des cartes perforées, et Ada Lovelace a formalisé le concept de
-                    programme informatique pour cet appareil.</p>
-                <div class="textmono-title--glossaire">Nombres de Bernoulli :</div>
-                <p>Suite de nombres rationnels étudiés en mathématiques, notamment lors du calcul de certaines sommes
-                    algébriques. Ada Lovelace a créé un algorithme permettant à la machine analytique de calculer les
-                    nombres de Bernoulli, ce qui constitue le premier programme informatique connu.</p>
+                <p>+A 19th-century British mathematician and inventor, considered the father of computers. He conceived
+                    and designed the analytical engine, the ancestor of modern computers, with the intellectual
+                    assistance of Ada Lovelace.</p>
+                <div class="textmono-title--glossaire">Analytical Engine :</div>
+                <p>A programmable calculating machine designed by Charles Babbage. This machine could have executed
+                    algorithms using punch cards, and Ada Lovelace formalized the concept of a computer program for this
+                    device.</p>
+                <div class="textmono-title--glossaire">Bernoulli numbers :</div>
+                <p>A sequence of rational numbers studied in mathematics, particularly when calculating certain
+                    algebraic sums. Ada Lovelace created an algorithm enabling the analytical engine to calculate
+                    Bernoulli numbers, which is considered to be the first known computer program.</p>
                 <div class="textmono-title--glossaire">Alan Turing :</div>
-                <p>Mathématicien et logicien britannique du XXe siècle, figure clé de l’intelligence artificielle et de
-                    la cryptanalyse. Il a reconnu l’importance des travaux d’Ada Lovelace et s’est inspiré de ses
-                    réflexions pour développer la théorie de la machine de Turing, base de l’informatique moderne.</p>
+                <p>A 20th-century British mathematician and logician, he was a key figure in artificial intelligence and
+                    cryptanalysis. He recognized the importance of Ada Lovelace's work and drew inspiration from her
+                    ideas to develop the theory of the Turing machine, the basis of modern computing.</p>
                 <div class="textmono-title--glossaire">Joan Clarke:</div>
-                <p>Mathématicienne et cryptanalyste britannique qui a collaboré avec Alan Turing pour décrypter le code
-                    Enigma durant la Seconde Guerre mondiale. Comme Ada Lovelace, elle a longtemps été méconnue dans
-                    l’histoire des sciences malgré ses contributions majeures.</p>
+                <p>British mathematician and cryptanalyst who collaborated with Alan Turing to decrypt the Enigma code
+                    during World War II. Like Ada Lovelace, she was long overlooked in the history of science despite
+                    her major contributions.</p>
                 <div class="textmono-title--glossaire">Jean C. Baudet:</div>
-                <p>Philosophe, historien et écrivain belge, spécialiste de l’histoire des sciences et des techniques.
-                    Dans ses travaux, il analyse la naissance de l’informatique, l’évolution des concepts de machines et
-                    la reconnaissance de figures clés comme Ada Lovelace.</p>
+                <p>Belgian philosopher, historian, and writer specializing in the history of science and technology. In
+                    his work, he analyzes the birth of computer science, the evolution of machine concepts, and the
+                    recognition of key figures such as Ada Lovelace.</p>
             </div>
         </section>
     </main>
     <footer class="footer" role="contentinfo">
         <div class="footer__left">
             <div class="footer__logo">
-                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image du logo de Ada Lovelace "></a>
+                <a href="index.html"><img src="../assets/img/logo ADA.svg" alt="Image of the Ada Lovelace logo "></a>
             </div>
             <div class="footer__leftelement">
                 <p>CONTACT</p>
@@ -134,23 +131,23 @@
                 </div>
             </div>
             <div class="footer__leftelement">
-                <p>MENTIONS LÉGALES</p>
+                <p>LEGAL NOTICE</p>
                 <div class="footer__leftelement-text">
-                    <p>“projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département MMi de
+                    <p>“project carried out in 2025 as part of a pedagogical exercise at the MMi department of
                         Montbéliard“</p>
                 </div>
             </div>
         </div>
 
         <div class="footer__right">
-            <a href="glossaire.html" class="footer__rightelement">Glossaire</a>
-            <a href="contact.html" class="footer__rightelement">Contactez-nous</a>
-            <a href="a-propos.html" class="footer__rightelement">À propos</a>
-            <a href="autres-projets.html" class="footer__rightelement">Autres Projets</a>
+            <a href="glossaire.html" class="footer__rightelement">Glossary</a>
+            <a href="contact.html" class="footer__rightelement">Contact Us</a>
+            <a href="a-propos.html" class="footer__rightelement">About</a>
+            <a href="autres-projets.html" class="footer__rightelement">Other Projects</a>
             <div class="footer__division"></div>
             <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank"
-                class="footer__logoMMi" aria-label="Visiter le site du département MMi (nouvelle fenêtre)">
-                <img src="../assets/img/MMI_logo.svg" alt="Logo MMi">
+                class="footer__logoMMi" aria-label="Visit the MMi department website (new window)">
+                <img src="../assets/img/MMI_logo.svg" alt="MMi Logo">
             </a>
         </div>
     </footer>
